      ``_network_name`` to support removing more _ensure_real calls.
      (Robert Collins)

    * ``RemoteBranchFormat`` no longer claims to have a disk format string.
      (Robert Collins)

    * ``Repository`` objects now have ``suspend_write_group`` and
      ``resume_write_group`` methods.  These are currently only useful
      with pack repositories. (Andrew Bennetts, Robert Collins)

    * ``RepositoryFormat`` objects now have a ``network_name`` for passing
      the format across RPC calls. (Robert Collins, Andrew Bennetts)

    * ``RepositoryFormat`` objects now all have a new attribute
      ``_serializer`` used by fetch when reserialising is required.
      (Robert Collins, Andrew Bennetts)

    * Some methods have been pulled up from ``BzrBranch`` to ``Branch``
      to aid branch types that are not bzr branch objects (like
      RemoteBranch). (Robert Collins, Andrew Bennetts)

    * ``TestSkipped`` is now detected by TestCase and passed to the
      ``TestResult`` by calling ``addSkip``. For older TestResult objects,
      where ``addSkip`` is not available, ``addError`` is still called.
      This permits test filtering in subunit to strip out skipped tests
      resulting in a faster fix-shrink-list-run cycle. This is compatible
      with the testtools protocol for skips. (Robert Collins)

    * The ``_index`` of ``KnitVersionedFiles`` now supports the ability
      to scan an underlying index that is going to be incorporated into
      the ``KnitVersionedFiles`` object, to determine if it has missing
      delta references. The method is ``scan_unvalidated_index``.
      (Andrew Bennetts, Robert Collins)

    * There is a RemoteSink object which handles pushing to smart servers.
      (Andrew Bennetts, Robert Collins)

    * ``VersionedFiles`` record adapters have had their signature change
      from ``(record, record.get_bytes_as(record.storage_kind))`` to
      ``(record)`` reducing excess duplication and allowing adapters